--- a/index.html
+++ b/index.html
@@ -4,15 +4,9 @@
         <meta charset="utf-8">
         <title>Webpack - Empty starter</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet" type="text/css" href="./public/style.css" />
+        <link rel="stylesheet" type="text/css" href="./dist/css/main.css" />
     </head>
     <body>
-        <h1>Lorem ipsum dolor sit amet</h1>
-
-        <main>
-            <p>SVG : <i class="svg"></i></p>
-        </main>
-
-        <script src="./public/index.js"></script>
+        <script src="./dist/js/index.js"></script>
     </body>
 </html>
